--- a/css/css/style.css
+++ b/css/css/style.css
@@ -73,9 +73,15 @@ nav {
       position:fixed;
 }
 
-nav img {
-    width:100%;
-    border-bottom:.0625rem solid #333;
+nav {
+    float:left;
+    display: flex;
+    flex-wrap:wrap;
+    flex-direction: column;
+    width:14rem;
+    border:.0625rem solid #333;
+    background-color:#8FB0D0;
+    position:fixed;
 }
 
 nav p {
