--- a/Wanted-poster/wanted-poster/css/style.css
+++ b/Wanted-poster/wanted-poster/css/style.css
@@ -40,20 +40,6 @@ main {
     border:1px solid #333;
 }
 
-/* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
-
-/* NO changes should be made to any of the code above. */
-
-/* The first heading style rule has been completed for you. Examine it carefully
-   to get an idea of some of the style properties you will need to use; then
-   complete the style code according to the instructions in Canvas. */
-
-/* NOTE: While you will be using some of the same CSS properties, the VALUES 
-   may need to be different in order to style the page correctly. */
-
-
-/* Headings  */
-
 h1 {
     text-transform: uppercase;
     font-size:6rem;
@@ -65,18 +51,106 @@ h1 {
     text-align:center;
 }
 
+h2 {
+    text-transform: uppercase;
+    font: size 3rem;
+    font-weight: normal;
+    margin: 0;
+    letter-spacing: .25rem;
+    color:darkred;
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+}
+
+h3 {
+    text-transform: uppercase;
+    font-size:2rem;
+    font-weight: normal;
+    margin: 0;
+    letter-spacing: .5rem;
+    color:#000;
+    text-shadow:none;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+}
+
+h4 {
+    text-transform: uppercase;
+    font: size 1.5em;
+    font-weight: normal;
+    margin: 0;
+    letter-spacing: 0.25rem;
+    color:darkred;
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+    padding-bottom: 1.125rem;
+    
+}
+
+span {
+padding-top: 0;
+padding-left: .5rem;
+padding-right: .5rem;
+}
+
+h5 {
+    font-size:1rem;
+    font-weight: normal;
+    margin-top:.25rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    letter-spacing: .5rem;
+    background-color: #333;
+    color: #fff;
+    text-shadow:.09375rem .09375rem .09375rem #000;
+    font-family:'Alfa Slab One', Garamond, serif;
+    text-align:center;
+}
+
+
+section {
+margin-top: .5rem;
+}
+
 p {
-    color: red;
-  }
-
-/* Section & Paragraph */
-
-
-
-/* Image & Figure */
-
-
-
-/* Footer */
+margin-top: 1rem;  
+margin-left: auto;
+margin-right: auto;
+padding-top: 0;
+padding-top: 0;
+padding-left: 1rem;
+padding-right: 1rem;
+width: 90%;
+text-align: left;
+}
 
 
+img {
+width: 100%;
+margin-top: 0;
+margin-bottom: 0;
+margin-left: auto;
+margin-right: auto;
+max-width: 50rem;
+}
+ figure {
+margin-bottom: 2rem;
+ }
+
+ figcaption {
+margin-bottom: 2rem;
+padding-top: .5rem;
+text-align: right;
+ }
+
+footer {
+padding-top: 1rem;
+padding-bottom: 1rem;
+padding-left: 1rem;
+padding-right: 1rem;
+border-top: 2rem solid #333;
+}
