--- a/school-site /school-site/css/style.css
+++ b/school-site /school-site/css/style.css
@@ -65,7 +65,7 @@ section, aside, nav, footer {
 
 header, footer {
   border-top: .125rem solid #33658A;
-  border-bottom: .125rem solid #33658A;
+  border-bottom: .125rem solid #8a4733;
 }
 
 /* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
