--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -71,97 +71,135 @@ header, footer {
 /* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
 
 
-
-/* NOTE: While you will be using some of the same CSS properties, the VALUES 
-   may need to be different in order to style the page correctly. */
-
-
-
 /* Imported Typfaces */
 @font-face {
-    font-family: Josefins;
-    src: url(school-site/fonts/josefinslab-regular.ttf) format('truetype');
+    font-family: Josefinslab;
+    src: url(school-site/fonts/josefinslab-regular.ttf) format ('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: Montserrat;
-    src: url(school-site/fonts/montserrat-regular.ttf) format('truetype');
+    src: url(school-site/fonts/montserrat-regular.ttf) format ('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 /* Typography Styles */
 html {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: Montserrat;
 }
 h1 {
-    font-family: Josefinslab, Arial, sans-serif
+    font-family: Josefinslab;
     letter-spacing: .125rem;
-
+    text-align: center;
+    font-size: 3.75rem;
+    margin: 1.125rem;
 }
 h2 {
     letter-spacing: .125rem;
+    font-family: Josefinslab;
+    font-size: 1.5rem;
+
 }
 h2 + p {
-    letter-spacing: .125rem;
+    font-family: Josefinslab;
+    text-indent: 1.5rem;
 }
 p {
-
+    font-size: .75rem;
+    letter-spacing: .031rem;
+    word-spacing: .125rem;
 }
 li {
-
+    font-size: .75rem;
+    letter-spacing: .031rem;
+    word-spacing: .125rem;
+}
+li + a {
+    color:#33658A
 }
 figcaption {
-
+    font-size: .75rem;
+    margin-bottom: 2rem;
 }
 
 
 /* Link Styling */
 
-a{
-
+a:{
+    outline: none;
+    color:#33658A
 }
-a:link,
+a:link {color:#33658A}
+a:visited, {
+    outline: none;
+    color:#33658A 
+}
+a:focus {color:#33658A}
 a:hover {
-
+    outline: none;
+    text-decoration: none;
+    color:#33658A
 }
-a:focus,
-a:hover {
-
-}
-
 
 /* List Styling */
 ul {
-
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    list-style-type: square;
 }
 ol {
-
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    list-style-type: lower-alpha;
 }
 .long-list a:hover {
-
+    text-transform: uppercase;
 }
+.long-list a {
+    color: #33658A;
+}
+
 /* Navigation Menu */
 nav {
-
+    padding: 0rem;
+    margin-top: .25rem;
+    color:#33658A
 }
+   
 nav a {
-
+    text-decoration: none;
+    width: 100;
+    line-height: 3;
+    text-align:center;
+    font-size: 1.125rem;
+    margin-bottom: 1.5rem;
+    border: solid;
+    border-width: .063rem;
+    border-color: #33658A;
+    color:#33658A;
 }
 nav a:focus,
 nav a:hover {
+    color: #fff;
+    background-color: #33658A;
 
 }
 nav a:active {
-
+color: #fff;
+background-color: #000;
 }
 /* Footer Styles */
 footer {
-
+    text-align: center;
 }
 
-
+</style>
 
 
 
