--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -174,6 +174,7 @@ nav {
    
 nav a {
     text-decoration: none;
+    display: inline-block;
     width: 100;
     line-height: 3;
     text-align:center;
@@ -182,13 +183,11 @@ nav a {
     border: solid;
     border-width: .063rem;
     border-color: #33658A;
-    color:#33658A;
-}
+   }
 nav a:focus,
 nav a:hover {
     color: #fff;
     background-color: #33658A;
-
 }
 nav a:active {
 color: #fff;
@@ -198,8 +197,3 @@ background-color: #000;
 footer {
     text-align: center;
 }
-
-</style>
-
-
-
