--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -174,8 +174,8 @@ nav {
    
 nav a {
     text-decoration: none;
-    display: inline-block;
-    width: 100;
+    display:inline-block;
+    width: 100%;
     line-height: 3;
     text-align:center;
     font-size: 1.125rem;
@@ -183,6 +183,7 @@ nav a {
     border: solid;
     border-width: .063rem;
     border-color: #33658A;
+    color: #33658A;
    }
 nav a:focus,
 nav a:hover {
