--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -90,7 +90,7 @@ html {
     font-family: Montserrat;
 }
 h1 {
-    font-family: Josefinslab;
+    font-family: Montserrat;
     letter-spacing: .125rem;
     text-align: center;
     font-size: 3.75rem;
