--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -80,7 +80,7 @@ header, footer {
 }
 @font-face {
     font-family: Montserrat;
-    src: url(school-site/fonts/montserrat-regular.ttf) format ('truetype');
+    src: url() format ('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -103,7 +103,7 @@ h2 {
 
 }
 h2 + p {
-    font-family: Josefinslab;
+    font-family: josefinslab;
     text-indent: 1.5rem;
 }
 p {
