--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -74,13 +74,13 @@ header, footer {
 /* Imported Typfaces */
 @font-face {
     font-family: Josefinslab;
-    src: url(Josefinslab) format ('truetype');
+    src: url(school-site/fonts/josefinslab-regular.ttf) format ('truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: Montserrat;
-    src: url(Montserrat) format ('truetype');
+    src: url(school-site/fonts/montserrat-regular.ttf) format ('truetype');
     font-weight: normal;
     font-style: normal;
 }
