--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -73,24 +73,24 @@ header, footer {
 
 /* Imported Typfaces */
 @font-face {
-    font-family: Josefinslab;
-    src: url(school-site/fonts/josefinslab-regular.ttf) format ('truetype');
+    font-family: 'Josefinslab';
+    src: url(/school-site/fonts/josefinslab-regular.ttf) format('Truetype');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-    font-family: Montserrat;
-    src:url(school-site/fonts/montserrat-regular.ttf) format ('truetype');
+    font-family: 'Montserrat';
+    src: url(/school-site/fonts/montserrat-regular.ttf) format('Truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 /* Typography Styles */
 html {
-    font-family: "Montserrat" Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 h1 {
-    font-family: "Josefinslab", Arial, Helvetica, sans-serif;
+    font-family: 'Josefinslab', Arial, Helvetica, sans-serif;
     letter-spacing: .125rem;
     text-align: center;
     font-size: 3.75rem;
@@ -98,12 +98,12 @@ h1 {
 }
 h2 {
     letter-spacing: .125rem;
-    font-family: "Josefinslab",Arial, Helvetica, sans-serif; 
+    font-family: 'Josefinslab',Arial, Helvetica, sans-serif; 
     font-size: 1.5rem;
 
 }
 h2 + p {
-    font-family: "Josefinslab", Arial, Helvetica, sans-serif;
+    font-family: 'Josefinslab', Arial, Helvetica, sans-serif;
     text-indent: 1.5rem;
 }
 p {
