--- a/wanted-poster/wanted-poster/css/style.css
+++ b/wanted-poster/wanted-poster/css/style.css
@@ -112,12 +112,13 @@ h5 {
 }
 
 
-section {
-margin-top: .5rem;
+section{
+margin-top:.5rem;
 }
 
 p {
 margin-top: 1rem;  
+margin-bottom: 1rem;
 margin-left: auto;
 margin-right: auto;
 padding-top: 0;
