--- a/wanted-poster/wanted-poster/css/style.css
+++ b/wanted-poster/wanted-poster/css/style.css
@@ -25,7 +25,7 @@ html {
 /* Body & Main  */
 
 body {
-    font-family:Lato, Arial, sans-serif;
+    font-family:'Lato', Arial, sans-serif;
     font-size:1rem;
     padding:1rem;
     min-width:39rem;
@@ -53,7 +53,7 @@ h1 {
 
 h2 {
     text-transform: uppercase;
-    font: size 3rem;
+    font-size: 3rem;
     font-weight: normal;
     margin: 0;
     letter-spacing: .25rem;
@@ -77,7 +77,7 @@ h3 {
 
 h4 {
     text-transform: uppercase;
-    font: size 1.5em;
+    font-size: 1.5em;
     font-weight: normal;
     margin: 0;
     letter-spacing: 0.25rem;
