--- a/wanted-poster/wanted-poster/css/style.css
+++ b/wanted-poster/wanted-poster/css/style.css
@@ -47,7 +47,7 @@ h1 {
     letter-spacing: .5rem;
     color:darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
+    font-family:'Alfa Slab One'
     text-align:center;
 }
 
@@ -103,7 +103,6 @@ h5 {
     padding-right: .5rem;
     padding-top: .5rem;
     padding-bottom: .5rem;
-    letter-spacing: .5rem;
     background-color: #333;
     color: #fff;
     text-shadow:.09375rem .09375rem .09375rem #000;
