--- a/wanted-poster/wanted-poster/css/style.css
+++ b/wanted-poster/wanted-poster/css/style.css
@@ -59,7 +59,7 @@ h2 {
     letter-spacing: .25rem;
     color:darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
+    font-family:'Alfa Slab One'
     text-align:center;
 }
 
@@ -71,7 +71,7 @@ h3 {
     letter-spacing: .5rem;
     color:#000;
     text-shadow:none;
-    font-family:'Alfa Slab One', Garamond, serif;
+    font-family:'Alfa Slab One'
     text-align:center;
 }
 
@@ -104,10 +104,10 @@ h5 {
     padding-top: .5rem;
     padding-bottom: .5rem;
     background-color: #333;
+    text-align: center;
     color: #fff;
     text-shadow:.09375rem .09375rem .09375rem #000;
-    font-family:'Alfa Slab One', Garamond, serif;
-    text-align:center;
+    font-family:'Alfa Slab One'
 }
 
 
